style.css
* {
  margin: 0 auto;
  padding: 0;
}

html {
  color: #ffffff;
  background-color: #212830;
  font-family: "Segoe UI", sans-serif;
}

body {
  margin: 0 auto;
}

header {
  padding: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  background: linear-gradient(#fff 90%, #212830);
}

main {
  padding: 1%;
}

h1 {
color:#212830;
}

h2 {
  margin: 2% auto;
  color: #fff;
  border-radius: 15px;
  font-size: 3rem;
  text-align: center;
}

h3 {
  font-size: 2rem;
  text-align: center;
}

li {
  all: unset;
}

nav {
  height: 2%;
  width: 30%;
}

article {
  display: flexbox;
  margin: 1% auto;
  padding: 1%;
}

article h3 {
  margin-bottom: 4%;
}

nav ul {
  display: flex;
  justify-content: end;
  align-items: center;
  font-size: xx-large;
}

nav li {
  padding: 2%;
  margin: 0 2%;
  font-size: 1.5rem;
  text-align: center;
  border-radius: 15px;
  background: #212830;
}

nav ul :hover {
  background: #eacaae;
  color: #212830;
}

nav a {
  all: unset;
  color: #fff;
}

nav a :hover {
  color: #212830;
}

#logoToureille {
  border-radius: 50%;
}

#enseigneMaisonToureille {
  display: block;
  margin: 2% auto;
  height: 2%;
}

#equipe {
  display: block;
  margin: 0 auto;
  width: 100%;
}
#activities {
  display: flex;
}

#presentation {
  display: flex;
}

#activities article p {
  text-align: justify;
  margin-top: 4%;
}

#presentation article {
  width: 40%;
}

#presentation article p {
  text-align: center;
  margin-top: 4%;

}

#activities article img {
  width: 100%;
  height: 65%;
  border-radius: 15px;
}

